--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body.alt {
 
 /* Container */
 .container {
-    width: 1100px;
+    width: 100%;
     margin: auto;
     background-color: rgb(231, 123, 46);
     transition: background 1s ease;
