--- a/style.css
+++ b/style.css
@@ -138,12 +138,13 @@ body.alt .header .judul {
 
 /* Banner */
 .banner {
+    width: 100%;
     height: 400px;
     background-size: cover;
     background-position: center;
     border-top: 10px solid rgb(23, 219, 23);
     border-bottom: 10px solid rgb(11, 227, 11);
-    transition: background-image 1s ease-in-out, height 0.5s ease;
+    transition: background-image 0.5s ease-in-out, height 0.5s ease;
 }
 body.alt .banner {
     height: 100vh;  
