--- a/style.css
+++ b/style.css
@@ -138,8 +138,8 @@ body.alt .header .judul {
 
 /* Banner */
 .banner {
-    width: 100%;
-    height: 400px;
+    width: auto;
+    height: auto;
     background-size: cover;
     background-position: center;
     border-top: 10px solid rgb(23, 219, 23);
