--- a/style.css
+++ b/style.css
@@ -147,7 +147,8 @@ body.alt .header .judul {
     transition: background-image 0.5s ease-in-out, height 0.5s ease;
 }
 body.alt .banner {
-    height: 100vh;  
+    width: auto;
+    height: auto;  
     border: none;
 }
 
