--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body.alt .header .judul {
 }
 body.alt .banner {
     width: auto;
-    height: auto;  
+    height: 100vh;  
     border: none;
 }
 
