--- a/style.css
+++ b/style.css
@@ -98,9 +98,6 @@ body.alt {
     transition: background 1s ease;
 }
 body.alt .container {
-    width: 100%;
-    max-width: 500px;
-    margin: auto;
     background-color: rgb(224, 226, 224);
 }
 
@@ -150,6 +147,7 @@ body.alt .header .judul {
     transition: background-image 0.5s ease-in-out, height 0.5s ease;
 }
 body.alt .banner {
+    width: auto;
     height: 100vh;  
     border: none;
 }
