--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body.alt .header .judul {
 /* Banner */
 .banner {
     width: auto;
-    height: auto;
+    height: 300px;
     background-size: cover;
     background-position: center;
     border-top: 10px solid rgb(23, 219, 23);
@@ -146,7 +146,8 @@ body.alt .header .judul {
     transition: background-image 1s ease-in-out, height 0.5s ease;
 }
 body.alt .banner {
-    height: 100vh;  
+    height: 100vh;
+    border: #29c72f; 
 }
 
 /* Content */
