--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ body.alt .header .judul {
 
 /* Banner */
 .banner {
+    transition: all 0.8s ease-in-out;
     width: auto;
     height: 300px;
     background-size: cover;
@@ -146,9 +147,14 @@ body.alt .header .judul {
     transition: background-image 1s ease-in-out, height 0.5s ease;
 }
 body.alt .banner {
-    height: 100vh;
-    border: #29c72f; 
+    height: 100vh;  
+    width: 100%;
+    background-size: contain;   /* fit ke layar tanpa crop */
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;               /* opsional */
 }
+
 
 /* Content */
 .content {
